--- a/_includes/form.html
+++ b/_includes/form.html
@@ -9,6 +9,11 @@
     <input type="email" name="_replyto" id="email" autocomplete="email" required>
   </div>
 
+  <div class="form__input input half">
+    <label for="url">URL to project (a paper, a repository, or a webpage describing it)</label>
+    <input type="url" id="url" name="url">
+  </div>
+
   <div class="form__input">
     <label for="message">Message</label>
     <textarea type="text" name="message" id="message" rows="7" autocomplete="message" required></textarea>
