--- a/_includes/form.html
+++ b/_includes/form.html
@@ -11,7 +11,7 @@
 
   <div class="form__input input half">
     <label for="url">URL to project (a paper, a repository, or a webpage describing it)</label>
-    <input type="url" id="url" name="url">
+    <input type="url" id="url" name="url" autocomplete="url" required>
   </div>
 
   <div class="form__input">
