testing changes to form

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -10,8 +10,8 @@
   </div>
 
   <div class="form__input input half">
-    <label for="url">URL to project (a paper, a repository, or a webpage describing it)</label>
-    <input type="url" id="url" name="url" autocomplete="url" required>
+    <label for="url">URL</label>
+    <input type="url" name="_url" id="url" autocomplete="url" required>
   </div>
 
   <div class="form__input">
