--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,3 +1,16 @@
+<form method="POST" action="https://formspree.io/andremaia.chagas@gmail.com">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Test Message"></textarea>
+
+    <div class="form__input input half">
+    <label for="url">URL</label>
+    <input type="url" name="_url" id="url" autocomplete="url" required>
+  </div>
+
+  <button type="submit">Send Test</button>
+</form>
+
+<!--
 <form id="contactForm" action="https://formspree.io/{{site.email}}" method="post" novalidate>
   <div class="form__input half">
     <label for="name">Name</label>
@@ -24,3 +37,4 @@
   <input class="hidden" type="text" name="_gotcha">
   <button class="btn js-submit" type="submit" value="Send">Send</button>
 </form>
+-->
